# smc-interpose

./: CMakeLists.txt  LICENSE  README.md  build.sh
src/: SMC.swift  interpose.cpp  run.swift
